--- a/modules/hyconfig/pyproject.toml
+++ b/modules/hyconfig/pyproject.toml
@@ -13,7 +13,9 @@ authors = [
   { name = "LittleSong2024", email = "LittleSong2024@outlook.com" },
 ]
 classifiers = ["Development Status :: 3 - Alpha", "Programming Language :: Python", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy"]
-dependencies = []
+dependencies = [
+  "HydrogenLib-Core"
+]
 
 [project.urls]
 Documentation = "https://github.com/LittleSong2024/HydrogenLib#readme"
