ci: 更新构建和发布工作流
- 移除 Publish Python Package 工作流
- 简化 Python Release Publish 工作流中的文件上传逻辑

--- a/.github/workflows/python-release-publish.yml
+++ b/.github/workflows/python-release-publish.yml
@@ -29,12 +29,9 @@ jobs:
 
       # 将构建的所有包同时上传到 github release
       - name: Upload Release Assets
-        shell: pwsh
         run: |
-          $files = Get-ChildItem -Path ./dist/*.whl
-          foreach ($file in $files) {
-              Write-Host "Uploading $file"
-              gh release upload $env:RELEASE_TAG $file.FullName
-              sleep 1
-          }
+          for f in *.whl; do
+            gh release upload "${{ github.event.release.tag_name }}" "$f"
+            sleep 1
+          done
 
