add: Include README.md in project metadata
- Add `readme = "README.md"` to `pyproject.toml` to include the README in the project metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "HydrogenLib-NEXT"
 dynamic = ["version"]
+readme = "README.md"
 requires-python = ">=3.12"
 keywords = []
 authors = [
