--- a/modules/resource-system/pyproject.toml
+++ b/modules/resource-system/pyproject.toml
@@ -16,8 +16,8 @@ dependencies = [
 ]
 
 [[project.authors]]
-name = "LittleSong2025"
-email = "LittleSong2024@outlook.com"
+name = "LittleNightSong"
+email = "LittleNightSongYO@outlook.com"
 [project.urls]
 Documentation = "https://github.com/LittleSong2025/HydrogenLib#readme"
 Issues = "https://github.com/LittleSong2025/HydrogenLib/issues"
