Update .gitignore to include new ignore patterns and refine existing

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@
 # IDE settings
 /.idea/
 /.vscode/
+/.ai/
 
 # Files in Dev
 /**/.temp/
 /**/.tests/
-/**/tests
+/**/tests/
 /**/dev-scripts/
-/uv.lock
-/hydrogenlib
+/**/uv.lock
+/**/.hydro-ignore
